# actixtagram

./: Cargo.toml  uploads.db
migrations/: 20201119053319_create-uploads-table.sql
src/: lib.rs  main.rs
static/: upload.html
tests/: download.rs
