[package]
name = "actixtagram"
version = "0.1.0"
authors = ["Florian Gilcher <florian.gilcher@asquera.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-multipart = "0.3"
actix-files = "0.4"
actix-rt = "1"
blocking = "1"
sqlx = { version = "0.4.0", features = [ "runtime-actix-rustls", "sqlite" ] }
image = "0.23"
async-channel = "1"
futures = "0.3"
http = "0.2"
#tracing = "0.1"
#tracing-futures = "0.2"
#tracing-subscriber = "0.2"